<?xml version="1.0"?>
<package format="2">
  <name>firstorder_lowpass_filter</name>
  <version>0.0.0</version>
  <description>The firstorder_lowpass_filter package</description>

  <maintainer email="hiraoka@jsk.imi.i.u-tokyo.ac.jp">hiraoka</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>

</package>
