<?xml version="1.0"?>
<package format="2">
  <name>wrench_filter</name>
  <version>0.0.0</version>
  <description>The wrench_filter package</description>

  <maintainer email="hiraoka@jsk.imi.i.u-tokyo.ac.jp">Naoki-Hiraoka</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>dynamic_reconfigure</depend>
  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>cpp_filters</depend>
</package>
